# achilles

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  euvd-refresh.yml  fixtures.yml  pages.yml  publish.yml
crates/achilles-wasm/: Cargo.toml
crates/achilles-wasm/src/: lib.rs
crates/app-audit/: Cargo.toml  build.rs
crates/app-audit/examples/: audit.rs
crates/app-audit/src/: asar.rs  lib.rs  linux.rs  windows.rs
crates/app-audit/src/macos/: code_signature.rs  entitlements.rs  info_plist.rs  mod.rs
crates/app-audit/src/macos/entitlements/: codesign.rs  mod.rs
crates/binmeta/: Cargo.toml
crates/binmeta/src/: lib.rs
crates/cbom/: Cargo.toml
crates/cbom/src/: aggregate.rs  cyclonedx.rs  evidence.rs  lib.rs  model.rs  normalize.rs  staticscan.rs
crates/cbom/tests/: inventory.rs
crates/cve/: Cargo.toml
crates/cve/examples/: lookup.rs
crates/cve/src/: advisory.rs  cache.rs  lib.rs  settings.rs  version.rs
crates/cve/src/sources/: euvd.rs  ghsa.rs  mod.rs  nvd.rs  osv.rs  snapshot.rs
crates/detect/: Cargo.toml  build.rs
crates/detect/examples/: detect.rs
crates/detect/src/: app.rs  bundle.rs  cef.rs  chromium_browser.rs  deno.rs  electron.rs  flutter.rs  java.rs  lib.rs  metadata.rs  nwjs.rs  qt.rs  react_native.rs  safari.rs  sciter.rs  strings.rs  system_webview.rs  tauri.rs  wails.rs
crates/detect/tests/: integration.rs  more_runtimes.rs  portable.rs
crates/fixtures/: Cargo.toml
crates/fixtures/electron-sample/: README.md  expected.json  index.html  main.js  package.json
crates/fixtures/src/: lib.rs
crates/macho-audit/: Cargo.toml
crates/macho-audit/examples/: audit.rs
crates/macho-audit/src/: asar.rs  code_signature.rs  entitlements.rs  info_plist.rs  lib.rs
crates/netmon/: Cargo.toml
crates/netmon-helper/: Cargo.toml
crates/netmon-helper/src/: main.rs
crates/netmon/src/: lib.rs  model.rs  source.rs  wire.rs
crates/netmon/src/backends/: helper.rs  mod.rs  pcap_backend.rs
crates/netmon/src/engine/: mod.rs  packet.rs  tls.rs
crates/netmon/tests/: handshake.rs
crates/rust-audit/: Cargo.toml
crates/rust-audit/src/: db.rs  extract.rs  lib.rs
crates/scan/: Cargo.toml
crates/scan/examples/: scan.rs
crates/scan/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/sideeffects/: Cargo.toml
crates/sideeffects/examples/: sideeffects.rs
crates/sideeffects/src/: browsers.rs  bundle_internal.rs  launch.rs  lib.rs  linux.rs  logs.rs  types.rs  windows.rs
crates/static-scan/: Cargo.toml
crates/static-scan/examples/: static-scan.rs
crates/static-scan/src/: asar.rs  ast.rs  deps.rs  lib.rs  par.rs  scanner.rs
crates/static-scan/src/rules/: mod.rs
crates/static-scan/tests/: integration.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs  mem.rs  native.rs
docs/: collector-schema.md  index.html  netmon-helper.md  styles.css  vdb-snapshot-schema.md
scripts/: build-demo.sh  build-web.sh  fetch-euvd.sh  stage-netmon-helper.sh
src-tauri/: Cargo.toml  relic.conf  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/LaunchDaemons/: dev.crabnebula.achilles.netmon.plist
src-tauri/src/: commands.rs  crypto_store.rs  helper_mac.rs  journal.rs  lib.rs  main.rs  reporting.rs
ui/: euvd-updater.js  index.html  main.js  manifest.webmanifest  styles.css  sw.js  tauri-shim.js
