[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["CrabNebula Ltd. <hello@crabnebula.dev>"]
repository = "https://github.com/crabnebula-dev/achilles"

[workspace.dependencies]
# shared detection deps
memchr = "2.7"
memmap2 = "0.9"
plist = "1.7"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# async + HTTP + hashing for scan / cve / audit crates
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util", "fs"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
semver = "1"
dirs = "6"
# cross-platform binary parsing: ELF (Linux) + PE (Windows) headers, imports,
# program headers for the audit + detection layers
goblin = "0.9"
# PE version resources + DllCharacteristics + embedded manifests (Windows)
pelite = "0.10"
# Windows registry access (system webview, autostart, native-messaging hosts)
winreg = "0.52"
# Parse the embedded Authenticode PKCS#7 to read the signer certificate
cms = "0.2"
x509-cert = "0.2"
# Win32 APIs: Authenticode trust verification (WinVerifyTrust) and resolving
# Start Menu / Startup `.lnk` shortcuts via the Shell COM API (IShellLinkW).
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
] }
# data-parallelism for the static-scan corpus loop
rayon = "1.10"
# wasm / browser entry point (the `achilles-wasm` crate); pinned centrally so
# every wasm-binding dependency (incl. reqwest's wasm backend) resolves to one
# `wasm-bindgen` version.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
# JS / TS AST parsing for the static-scan rules
oxc_allocator = "0.126"
oxc_ast = "0.126"
oxc_ast_visit = "0.126"
oxc_parser = "0.126"
oxc_span = "0.126"
# internal crates referenced across the workspace
vfs = { path = "crates/vfs" }
detect = { path = "crates/detect" }
scan = { path = "crates/scan" }
cve = { path = "crates/cve" }
app-audit = { path = "crates/app-audit" }
static-scan = { path = "crates/static-scan" }
sideeffects = { path = "crates/sideeffects" }
