[package]
name = "achilles"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Achilles — scan installed apps for Electron/Tauri/etc. runtime risk."

[lib]
name = "achilles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
detect.workspace = true
scan.workspace = true
cve.workspace = true
macho-audit.workspace = true
static-scan.workspace = true
sideeffects.workspace = true
