[package]
name = "achilles"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Achilles — scan installed apps for Electron/Tauri/etc. runtime risk."

[lib]
name = "achilles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
uuid = { version = "1", features = ["v4"] }
whoami = "1"
detect.workspace = true
scan.workspace = true
cve.workspace = true
app-audit.workspace = true
static-scan.workspace = true
sideeffects.workspace = true
