[package]
name = "achilles-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Browser/WASM entry point: analyse an uploaded .app (zipped) or app.asar"

[lib]
crate-type = ["cdylib", "rlib"]

# Everything here is wasm-only. On native this crate compiles to an empty lib
# (see the `#![cfg(target_arch = "wasm32")]` in lib.rs), so `cargo build
# --workspace` on the desktop stays fast and never pulls these deps.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
vfs.workspace = true
detect = { workspace = true, features = ["macos-bundle"] }
static-scan.workspace = true
cve.workspace = true
# Direct path dep (not `workspace = true`) so `default-features = false` takes
# effect — it turns off the `codesign` feature (and tokio) for the wasm build,
# which `workspace = true` would silently ignore.
app-audit = { path = "../app-audit", default-features = false, features = ["macos-bundle"] }
zip.workspace = true
