[package]
name = "detect"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Detect Electron / Tauri frameworks and their runtime versions from .app bundles"

[dependencies]
memchr.workspace = true
memmap2.workspace = true
plist.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[example]]
name = "detect"
path = "examples/detect.rs"
