[package]
name = "detect"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Detect Electron / Tauri frameworks and their runtime versions across macOS, Windows, and Linux apps"

[dependencies]
memchr.workspace = true
memmap2.workspace = true
plist.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true

# Windows / Linux read framework markers from the binary's import table and PE
# version resources; macOS relies on `.app` bundle layout + Info.plist instead.
[target.'cfg(not(target_os = "macos"))'.dependencies]
goblin.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
pelite.workspace = true
winreg.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[example]]
name = "detect"
path = "examples/detect.rs"
