[package]
name = "rust-audit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Detect cargo-auditable Rust binaries in an app and audit their crates against the RustSec advisory database."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
semver.workspace = true
dirs.workspace = true
toml.workspace = true
flate2.workspace = true
auditable-extract.workspace = true
memmap2.workspace = true
