[package]
name = "scan"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Discover installed GUI applications and run detection, streaming results."

[dependencies]
detect.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true

# Resolve Start Menu `.lnk` shortcuts to their target executables via the
# Shell COM API (IShellLinkW) — lets the OS parse the link.
[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[example]]
name = "scan"
path = "examples/scan.rs"
