[package]
name = "static-scan"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Regex-based static analysis rules for Electron app bundles. Reads ASAR archives directly."

[dependencies]
memmap2.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# RAST :)
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true

[dev-dependencies]

[[example]]
name = "static-scan"
path = "examples/static-scan.rs"
